--- a/index.html
+++ b/index.html
@@ -2,9 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/k.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta
+      property="og:url"
+      content="https://kymrhys2k22.github.io/portfolio-kym-rhys/"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Kym Rhys Portfolio" />
+    <meta property="og:description" content="Under Construction" />
+    <meta property="og:image" content="https://svgsilh.com/svg/2051703.svg" />
+    <title>Kym Rhys Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
