--- a/index.html
+++ b/index.html
@@ -1,96 +1,88 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>
-            Kym Rhys - Web Developer Portfolio | Front-End & Mobile Development
-        </title>
-        <meta
-            name="description"
-            content="Explore Kym Rhys's web development portfolio showcasing expertise in front-end and mobile development. View projects, skills, and contact information."
-        />
-        <link
-            rel="canonical"
-            href="https://kymrhys2k22.github.io/portfolio-kym-rhys/"
-        />
-        <link rel="icon" type="image/svg+xml" href="/k.svg" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Kym Rhys Portfolio | Front-End & Mobile Development</title>
+    <meta
+      name="description"
+      content="Explore Kym Rhys's web development showcasing expertise in front-end and mobile development. View projects, skills, and contact information." />
+    <meta
+      name="description"
+      content="Explore Kym Rhys's web development portfolio showcasing expertise in front-end and mobile development. View projects, skills, and contact information." />
+    <meta
+      name="keywords"
+      content="Kym Rhys, Web Developer, Front-End Developer, Mobile Developer, React, JavaScript, HTML, CSS, Portfolio, Web Development, UI/UX Design" />
+    <meta name="author" content="Kym Rhys" />
+    <meta name="publisher" content="Kym Rhys" />
+    <meta
+      name="robots"
+      content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
+    <link rel="canonical" href="https://kymrhys2k22.github.io/kym-rhys/" />
+    <link rel="icon" type="image/svg+xml" href="/k.svg" />
 
-        <!-- Open Graph / Facebook -->
-        <meta property="og:type" content="website" />
-        <meta
-            property="og:url"
-            content="https://kymrhys2k22.github.io/portfolio-kym-rhys/"
-        />
-        <meta
-            property="og:title"
-            content="Kym Rhys - Web Developer Portfolio"
-        />
-        <meta
-            property="og:description"
-            content="Explore Kym Rhys's web development projects and skills in front-end and mobile development."
-        />
-        <meta
-            property="og:image"
-            content="https://kymrhys2k22.github.io/portfolio-kym-rhys/og-image.jpg"
-        />
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://kymrhys2k22.github.io/kym-rhys/" />
+    <meta property="og:title" content="Kym Rhys - Web Developer Portfolio" />
+    <meta
+      property="og:description"
+      content="Explore Kym Rhys's web development projects and skills in front-end and mobile development." />
+    <meta
+      property="og:image"
+      content="https://raw.githubusercontent.com/KymRhys2k22/kym-rhys/refs/heads/main/src/assets/Profile.png" />
 
-        <!-- Twitter -->
-        <meta property="twitter:card" content="summary_large_image" />
-        <meta
-            property="twitter:url"
-            content="https://kymrhys2k22.github.io/portfolio-kym-rhys/"
-        />
-        <meta
-            property="twitter:title"
-            content="Kym Rhys - Web Developer Portfolio"
-        />
-        <meta
-            property="twitter:description"
-            content="Explore Kym Rhys's web development projects and skills in front-end and mobile development."
-        />
-        <meta
-            property="twitter:image"
-            content="https://kymrhys2k22.github.io/portfolio-kym-rhys/og-image.jpg"
-        />
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:url"
+      content="https://kymrhys2k22.github.io/kym-rhys/" />
+    <meta
+      property="twitter:title"
+      content="Kym Rhys - Web Developer Portfolio" />
+    <meta
+      property="twitter:description"
+      content="Explore Kym Rhys's web development projects and skills in front-end and mobile development." />
+    <meta
+      property="twitter:image"
+      content="https://raw.githubusercontent.com/KymRhys2k22/kym-rhys/refs/heads/main/src/assets/Profile.png" />
 
-        <!-- Structured Data -->
-        <script type="application/ld+json">
-            {
-                "@context": "https://schema.org",
-                "@type": "Person",
-                "name": "Kym Rhys",
-                "url": "https://kymrhys2k22.github.io/portfolio-kym-rhys/",
-                "sameAs": [
-                    "https://github.com/kymrhys2k22",
-                    "https://linkedin.com/in/kymrhys"
-                ],
-                "jobTitle": "Web Developer",
-                "worksFor": {
-                    "@type": "Organization",
-                    "name": "Freelance"
-                },
-                "description": "Front-end and mobile developer specializing in creating responsive and user-friendly web applications."
-            }
-        </script>
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Kym Rhys",
+        "url": "https://kymrhys2k22.github.io/kym-rhys/",
+        "sameAs": [
+          "https://github.com/kymrhys2k22",
+          "https://linkedin.com/in/kymrhys"
+        ],
+        "jobTitle": "Web Developer",
+        "worksFor": {
+          "@type": "Organization",
+          "name": "Freelance"
+        },
+        "description": "Front-end and mobile developer specializing in creating responsive and user-friendly web applications."
+      }
+    </script>
 
-        <link rel="stylesheet" href="/src/index.css" />
-        <meta name="theme-color" content="#4a5568" />
-    </head>
-    <body>
-        <div id="root"></div>
-        <script type="module" src="/src/main.jsx"></script>
+    <link rel="stylesheet" href="/src/index.css" />
+    <meta name="theme-color" content="#4a5568" />
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
 
-        <!-- Preload critical assets -->
-        <link rel="preload" href="/src/index.css" as="style" />
-        <link rel="preload" href="/src/main.jsx" as="script" />
+    <!-- Preload critical assets -->
+    <link rel="preload" href="/src/index.css" as="style" />
+    <link rel="preload" href="/src/main.jsx" as="script" />
 
-        <!-- Add reference to sitemap -->
-        <link
-            rel="sitemap"
-            type="application/xml"
-            title="Sitemap"
-            href="/sitemap.xml"
-        />
-    </body>
+    <!-- Add reference to sitemap -->
+    <link
+      rel="sitemap"
+      type="application/xml"
+      title="Sitemap"
+      href="/sitemap.xml" />
+  </body>
 </html>
