update meta tag

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kym Rhys Portfolio | Front-End & Mobile Development</title>
+    <title>Kym Rhys - Portfolio | Front-End & Mobile Development</title>
     <meta
       name="description"
       content="Explore Kym Rhys's web development showcasing expertise in front-end and mobile development. View projects, skills, and contact information." />
