--- a/index.html
+++ b/index.html
@@ -83,6 +83,6 @@
       rel="sitemap"
       type="application/xml"
       title="Sitemap"
-      href="/sitemap.xml" />
+      href="https://raw.githubusercontent.com/KymRhys2k22/kym-rhys/refs/heads/main/public/sitemap.xml" />
   </body>
 </html>
