deploy: 70d41418d00f4f6003639e69d65dd496f06947ab

--- a/index.html
+++ b/index.html
@@ -85,6 +85,6 @@
       rel="sitemap"
       type="application/xml"
       title="Sitemap"
-      href="/kym-rhys/sitemap.xml" />
+      href="https://raw.githubusercontent.com/KymRhys2k22/kym-rhys/refs/heads/main/public/sitemap.xml" />
   </body>
 </html>
