--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     <meta
       name="robots"
       content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
-    <link rel="canonical" href="https://kymrhys.vercel.app" />
+    <link rel="canonical" href="https://kym-rhys.vercel.app" />
     <link rel="icon" type="image/svg+xml" href="/k.svg" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://kymrhys.vercel.app" />
+    <meta property="og:url" content="https://kym-rhys.vercel.app" />
     <meta property="og:title" content="Kym Rhys - Web Developer Portfolio" />
     <meta
       property="og:description"
@@ -34,7 +34,7 @@
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://kymrhys.vercel.app" />
+    <meta property="twitter:url" content="https://kym-rhys.vercel.app" />
     <meta
       property="twitter:title"
       content="Kym Rhys - Web Developer Portfolio" />
@@ -81,6 +81,6 @@
       rel="sitemap"
       type="application/xml"
       title="Sitemap"
-      href="https://kymrhys.vercel.app/sitemap.xml" />
+      href="https://kym-rhys.vercel.app/sitemap.xml" />
   </body>
 </html>
